Allow gtk_radio_menu_item_set_group() to be called twice without crashing.

https://bugzilla.gnome.org/show_bug.cgi?id=726859